# src/routes.ts
@@ -56,6 +56,10 @@ const models: TsoaRoute.Models = {
             "name": {"dataType":"string","required":true},
             "enabled": {"dataType":"double","required":true},
             "order_num": {"dataType":"double","required":true},
+            "x": {"dataType":"double","required":true},
+            "y": {"dataType":"double","required":true},
+            "linkX": {"dataType":"double","required":true},
+            "linkY": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
     },
@@ -70,6 +74,8 @@ const models: TsoaRoute.Models = {
             "container_url": {"dataType":"string","required":true},
             "container_port": {"dataType":"string","required":true},
             "container_env": {"dataType":"string","required":true},
+            "x": {"dataType":"double","required":true},
+            "y": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
     },
